5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1643_2711.log
== TEST (2019-04-08 18:36:17) 
-- CODE:
valod = float(input("valor disponivel: "))
quatr = int(input("tickets do tu: "))
valot = float(input("valor do ru: "))
quanps = int(input("quantidades de passes de onibus: "))
valordopasse = float(input("valor do onibus: "))

gastos = (quatr*valot + quanps*valordopasse)

if  (dinheiro >= gastos):
     print("SUFICIENTE")
		
else:
	 print("INSUFICIENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if  (dinheiro >= gastos):
NameError: name 'dinheiro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:36:55) 
-- CODE:
valod = float(input("valor disponivel: "))
quatr = int(input("tickets do tu: "))
valot = float(input("valor do ru: "))
quanps = int(input("quantidades de passes de onibus: "))
valordopasse = float(input("valor do onibus: "))

gastos = (quatr*valot + quanps*valordopasse)

if  (valot >= gastos):
     print("SUFICIENTE")
		
else:
	 print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:37:26) 
-- CODE:
valod = float(input("valor disponivel: "))
quatr = int(input("tickets do tu: "))
valot = float(input("valor do ru: "))
quanps = int(input("quantidades de passes de onibus: "))
valordopasse = float(input("valor do onibus: "))

gastos = (quatr*valot + quanps*valordopasse)

if  (valot >= gastos):
     print("SUFICIENTE")
		
else:
	 print("INSUFICIENTE")
-- EXECUTION TIME:
0.138377
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:38:28) 
-- CODE:
valod = float(input("valor disponivel: "))
quatr = int(input("tickets do tu: "))
valot = float(input("valor do ru: "))
quanps = int(input("quantidades de passes de onibus: "))
valordopasse = float(input("valor do onibus: "))

gastos = (quatr*valot + quanps*valordopasse)

if  (valot >= gastos):
     print("SUFICIENTE")
		
else:
	 print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:39:42) 
-- CODE:
valod = float(input("valor disponivel: "))
quatr = int(input("tickets do ru: "))
valot = float(input("valor do ru: "))
quanps = int(input("quantidades de passes de onibus: "))
valordopasse = float(input("valor do onibus: "))

gastos = (quatr*valot + quanps*valordopasse)

if  (valod >= gastos):
     print("SUFICIENTE")
		
else:
	 print("INSUFICIENTE")
-- EXECUTION TIME:
0.232845
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
